--- a/wireframe/wireframe2.html
+++ b/wireframe/wireframe2.html
@@ -9,10 +9,26 @@
     <h1>Bookmark App</h1>
     <main>
         <fieldset>
+                <form class='addform'>
+                    <label>Title</label>
+                    <input>
+                    <label>URL</label>
+                    <input>
+                    <label>Description</label>
+                    <input>
+                <div class='ratingradio'>
+                    <h3>Rating</h3>
+                    <label><input type='radio' value='one star' required>1 Star</label>
+                    <label><input type='radio' value='two star' required>2 Stars</label>
+                    <label><input type='radio' value='three star' required>3 Stars</label>
+                    <label><input type='radio' value='four star' required>4 Stars</label>
+                    <label><input type='radio' value='five star' required>5 Stars</label>
+                </div>
             <button class='add'>Add Bookmark</button>
+            </form>
+        </fieldset>
             <button class='clear'>Remove all Bookmarks</button>
             <select class='sortby'>Minimum Rating</select>
-        </fieldset>
             <article class='booktabs'>
                 <div>
                     <h2>Example1</h2>
