--- a/wireframe/wireframe2.html
+++ b/wireframe/wireframe2.html
@@ -25,6 +25,7 @@
                     <label><input type='radio' value='five star' required>5 Stars</label>
                 </div>
             <button class='add'>Add Bookmark</button>
+            <button class='add'>Cancel</button>
             </form>
         </fieldset>
             <button class='clear'>Remove all Bookmarks</button>
@@ -41,6 +42,10 @@
                     </div>
                     <button class='remove'>Remove Bookmark</button>
                     <button class='edit'>Edit Bookmark</button>
+                    <form>
+                        <label><input type='text' name='useredit'></label>
+                    </form>
+                    <textarea name='editarea' form='useredit'>Edit here</textarea>
                 </div>
                 <div>
                     <h2>Example2</h2>
