index.js updates

--- a/wireframe/wireframe2.html
+++ b/wireframe/wireframe2.html
@@ -25,7 +25,7 @@
                     <label><input type='radio' value='five star' required>5 Stars</label>
                 </div>
             <button class='add'>Add Bookmark</button>
-            <button class='add'>Cancel</button>
+            <button class='cancel'>Cancel</button>
             </form>
         </fieldset>
             <button class='clear'>Remove all Bookmarks</button>
